# Homework_DRF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups.py  0003_alter_user_groups.py  0004_alter_user_groups_payment.py  0005_alter_user_groups.py  0006_alter_user_groups.py  0007_alter_user_groups.py  0008_alter_user_groups_stripepayment.py  0009_alter_stripepayment_link_alter_user_groups.py
