[project]
name = "homework-drf"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Serdiuk",email = "ytfrpkkpreim@mail.ru"}
]
requires-python = "^3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ipython (>=9.12.0,<10.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "djangorestframework-stubs (>=3.16.9,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "poetry.lockdjangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "timedelta (>=2020.12.3,<2021.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[tool.black]
line-length = 119
exclude = ".git"


[tool.isort]
line_length = 119
profile = "black"
